--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     
-    <script src="./js/script.js"></script>
+    <script src="./js/array-lista.js"></script>
+    <script src="./js/array_tail.js"></script>
+
 </body>
 </html>
