--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     
-    <script src="./js/array-lista.js"></script>
-    <script src="./js/array_tail.js"></script>
+    <!-- <script src="./js/array-lista.js"></script>
+    <script src="./js/array_tail.js"></script> -->
+    <!-- <script src="./js/snack9.js"></script> -->
+    <script src="./js/snack10.js"></script>
 
 </body>
 </html>
