--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="./js/array-lista.js"></script>
     <script src="./js/array_tail.js"></script> -->
     <!-- <script src="./js/snack9.js"></script> -->
-    <script src="./js/snack10.js"></script>
+    <!-- <script src="./js/snack10.js"></script> -->
+    <script src="./js/snack11.js"></script>
 
 </body>
 </html>
