--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script src="./js/array_tail.js"></script> -->
     <!-- <script src="./js/snack9.js"></script> -->
     <!-- <script src="./js/snack10.js"></script> -->
-    <script src="./js/snack11.js"></script>
+    <!-- <script src="./js/snack11.js"></script> -->
+    <script src="./js/snack12.js"></script>
+
 
 </body>
 </html>
