--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!-- <script src="./js/snack12.js"></script> -->
     <!-- <script src="./js/snack13.js"></script> -->
     <!-- <script src="./js/snack14.js"></script> -->
-    <script src="./js/snack15.js"></script>
+    <!-- <script src="./js/snack15.js"></script> -->
+    <script src="./js/snackobjects1.js"></script>
+
 
 
 
